# gui-scanner

./: .gitignore  README.md  generate_icon.py  hidden_scanner.ps1  pyproject.toml  run.bat  yinhu.spec
.github/workflows/: build.yml
src/yinhu/: __init__.py  __main__.py  app.py  whitelist.py
src/yinhu/report/: html_export.py
src/yinhu/scanners/: base.py  browser_extensions.py  dll_injection.py  hosts.py  network.py  powershell_profile.py  process.py  registry.py  services.py  tasks.py  wmi.py
src/yinhu/ui/: context_menu.py  main_window.py  scan_panel.py  theme.py
